<resources>
    <string name="app_name">Password Manager</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="url">WebSite Url</string>
    <string name="save">Enregistrer</string>
    <string name="saveTitle">Nouveau compte</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="alreadyAccount">You already have an account ?</string>
    <string name="passwordLeak">Check if it leaked</string>
    <string name="check">Test my password</string>
    <string name="password_list">Password List</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="result_display">Result Display..</string>
    <string name="scan">Scan</string>
    <string name="addData">Ajouter des identifiants</string>
    <string name="todo">TODO</string>
    <string name="ifLeakifSafe">print if leak or not</string>
    <string name="URL">Url :</string>
    <string name="apiimg"></string>
    <string name="generate_api_image">generate image</string>


    <string name="one">1</string>


    <string name="name">Home Loan Account</string>
    <string name="amount">53.96</string>
    <string name="iban">GL2892415196580170</string>
    <string name="currency">$</string>
    <string name="exit">exit</string>
    <string name="refresh">refresh</string>
    <string name="generate_api_image">generate_api_image</string>
    <string name="apiimg">apiimg</string>
</resources>
