<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout3"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="2dp"
    android:background="@color/cardview_dark_background"
    android:padding="10dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/webSiteUrl"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webSiteUrl" />

    <TextView
        android:id="@+id/passwordClearOrNot"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/seePassword"
        android:layout_margin="10dp"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:background="@android:drawable/ic_menu_view"
        app:layout_constraintBottom_toBottomOf="@+id/passwordClearOrNot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toEndOf="@+id/passwordClearOrNot"
        app:layout_constraintTop_toTopOf="@+id/passwordClearOrNot" />

    <TextView
        android:id="@+id/textView7"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/passwordLeak"
        app:layout_constraintBottom_toTopOf="@+id/leakedOrNot"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/leakedOrNot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/ifLeakifSafe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_margin="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/check"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>